fixed overflow on mobile

--- a/src/app/about-page/about-page.component.css
+++ b/src/app/about-page/about-page.component.css
@@ -7,6 +7,7 @@
     border-radius: 10px;
     padding: 3vh 5vw;
     text-align: left;
+    overflow: auto;
 }
 
 p {
